--- a/page1/main.css
+++ b/page1/main.css
@@ -341,6 +341,120 @@ html {
 
   /* end blue section */
   /* embed section */
+
+  .embed-section {
+    width: 100%;
+  }
+
+  .embed1 {
+    width: 95.5vw;
+    /* border: 1px solid; */
+    margin: 10.6vw auto 4vw;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+  }
+
+  .embed1-script {
+    width: 100%;
+  }
+
+  .embed1-text {
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center !important;
+  }
+
+  .align-right {
+    text-align: right;
+  }
+
+  .embed1-title {
+    display: block;
+    font-family: Montserrat-ExtraBold;
+    font-size: 26px;
+    color: #a135f7;
+    letter-spacing: 0;
+    margin-bottom: 13.4vw;
+  }
+
+  .embed1-subtitle {
+    display: block;
+    font-family: Poppins-Light;
+    font-size: 20px;
+    color: #000000;
+    letter-spacing: 0;
+    margin-bottom: 3.73vw;
+  }
+
+  .embed2 {
+    width: 81.25%;
+    /* border: 1px solid; */
+    margin: 14.4vw auto 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .embed2-subtitle {
+    display: block;
+    font-family: Poppins-Light;
+    font-size: 20px;
+    color: #000000;
+    letter-spacing: 0;
+    margin-bottom: 3.73vw;
+  }
+
+  .separator {
+    width: 249px;
+    margin: 0 auto;
+  }
+
+  /* end embed section */
+  /* drop a line section */
+
+  .drop-a-line-section {
+    width: 100%;
+    height: 158.4vw;
+    background-image: linear-gradient(90deg, #00dcf9 0%, #a234f7 100%);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .drop-a-line-container {
+    width: 90vw;
+    margin: 16vw auto 0px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .drop-a-line-text {
+    text-align: center;
+  }
+
+  .drop-a-line-form {
+    /* width: 50%; */
+  }
+
+  .drop-a-line-title {
+    font-family: Montserrat-ExtraBold;
+    font-size: 26px;
+    color: #ffffff;
+    letter-spacing: 0;
+  }
+  .drop-a-line-subtitle {
+    display: block;
+    margin-top: 0.625rem;
+    font-family: Poppins-Light;
+    font-size: 16px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 26px;
+    padding: 0 3vw;
+  }
+
+  /* end drop a line section */
 }
 
 @media only screen and (min-width: 768px) {
