--- a/page2/main.css
+++ b/page2/main.css
@@ -755,7 +755,7 @@ html {
     height: 33vw;
     position: absolute;
     z-index: 2;
-    top: 52.2vw;
+    top: 44.2vw;
   }
 
   .examples-img {
@@ -773,7 +773,7 @@ html {
   .desc-blue-section {
     background-color: #151b20;
     width: 100vw;
-    height: 51.7vw;
+    height: 59.7vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -807,6 +807,7 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 0;
   }
 
   .element {
